rnsc/tests/snapshots/error-lexer-type_hints-at_methoderf.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
@methoderf
----- STDERR -----
[E-005] Error: unknown type hint
   ╭─[ test_data/rns_integration/error/lexer/type_hints/at_methoderf.rns:1:1 ]
   │
 1 │ @methoderf
   │ ─────┬────  
   │      ╰────── '@methoderf' is not a recognized type hint
   │ 
   │ Help: Did you mean '@methodref'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-005
───╯
----- HASH -----
not generated
