rnsc/tests/snapshots/error-lexer-type_hints-at_ut8.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
@ut8
----- STDERR -----
[E-005] Error: unknown type hint
   ╭─[ test_data/rns_integration/error/lexer/type_hints/at_ut8.rns:1:1 ]
   │
 1 │ @ut8
   │ ──┬─  
   │   ╰─── '@ut8' is not a recognized type hint
   │ 
   │ Help: Did you mean '@utf8'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-005
───╯
----- HASH -----
not generated
